<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="12dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#FF898989"
			android:text="@string/base_configuration"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="#FFFFFFFF" />

		<CheckBox
			android:id="@+id/cb_immediateEffect"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/immediate_effect" />

		<CheckBox
			android:id="@+id/cb_recordLog"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/record_log" />

		<CheckBox
			android:id="@+id/cb_showToast"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/show_toast" />

		<CheckBox
			android:id="@+id/cb_stayAwake"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/stay_awake" />

		<CheckBox
			android:id="@+id/cb_autoRestart"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/auto_restart_service" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#FF898989"
			android:text="@string/forest_configuration"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="#FFFFFFFF" />

		<CheckBox
			android:id="@+id/cb_collectEnergy"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/collect_energy" />

		<Button
			android:id="@+id/btn_checkInterval"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/check_interval_minutes"
			android:textAllCaps="false" />

		<Button
			android:id="@+id/btn_threadCount"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/thread_count"
			android:textAllCaps="false" />

		<Button
			android:id="@+id/btn_advanceTime"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/advance_time_milliseconds"
			android:textAllCaps="false" />

		<Button
			android:id="@+id/btn_collectInterval"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/collect_interval_milliseconds"
			android:textAllCaps="false" />

		<Button
			android:id="@+id/btn_collectTimeout"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/collect_timeout_seconds"
			android:textAllCaps="false" />

		<Button
			android:id="@+id/btn_returnWater30"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/return_water_30"
			android:textAllCaps="false" />

		<Button
			android:id="@+id/btn_returnWater20"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/return_water_20"
			android:textAllCaps="false" />

		<Button
			android:id="@+id/btn_returnWater10"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/return_water_10"
			android:textAllCaps="false" />

		<CheckBox
			android:id="@+id/cb_helpFriendCollect"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/help_friend_collect" />

		<Button
			android:id="@+id/btn_dontCollectList"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/don_t_collect_list"
			android:textAllCaps="false" />

		<Button
			android:id="@+id/btn_dontHelpCollectList"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/don_t_help_collect_list"
			android:textAllCaps="false" />

		<CheckBox
			android:id="@+id/cb_receiveForestTaskAward"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/receive_forest_task_award" />

		<Button
			android:id="@+id/btn_waterFriendList"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/water_friend_list"
			android:textAllCaps="false" />

		<CheckBox
			android:id="@+id/cb_cooperateWater"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/cooperate_water" />

		<Button
			android:id="@+id/btn_cooperateWaterList"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/cooperate_water_list"
			android:textAllCaps="false" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#FF898989"
			android:text="@string/farm_configuration"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="#FFFFFFFF" />

		<CheckBox
			android:id="@+id/cb_enableFarm"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/enable_farm" />

		<CheckBox
			android:id="@+id/cb_rewardFriend"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/reward_friend" />

		<CheckBox
			android:id="@+id/cb_sendBackAnimal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/send_back_animal" />

		<Button
			android:id="@+id/btn_sendType"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/send_type"
			android:textAllCaps="false" />

		<Button
			android:id="@+id/btn_dontSendFriendList"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/don_t_send_firend_list"
			android:textAllCaps="false" />

		<Button
			android:id="@+id/btn_recallAnimalType"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/recall_animal_type"
			android:textAllCaps="false" />

		<CheckBox
			android:id="@+id/cb_receiveFarmToolReward"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/receive_farm_tool_reward" />

		<CheckBox
			android:id="@+id/cb_useNewEggTool"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/use_new_egg_tool" />

		<CheckBox
			android:id="@+id/cb_harvestProduce"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/harvest_produce" />

		<CheckBox
			android:id="@+id/cb_donation"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/donation" />

		<CheckBox
			android:id="@+id/cb_answerQuestion"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/answer_question" />

		<CheckBox
			android:id="@+id/cb_receiveFarmTaskAward"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/receive_farm_task_award" />

		<CheckBox
			android:id="@+id/cb_feedAnimal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/feed_animal" />

		<CheckBox
			android:id="@+id/cb_useAccelerateTool"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/use_accelerate_tool" />

		<Button
			android:id="@+id/btn_feedFriendAnimalList"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/feed_friend_animal_list"
			android:textAllCaps="false" />

		<CheckBox
			android:id="@+id/cb_notifyFriend"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/notify_friend" />

		<Button
			android:id="@+id/btn_dontNotifyFriendList"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/don_t_notify_friend_list"
			android:textAllCaps="false" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#FF898989"
			android:text="@string/other_configuration"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="#FFFFFFFF" />

		<CheckBox
			android:id="@+id/cb_receivePoint"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/receive_point" />

		<CheckBox
			android:id="@+id/cb_openTreasureBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/open_treasure_box" />

		<CheckBox
			android:id="@+id/cb_donateCharityCoin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/donate_charity_coin" />

		<Button
			android:id="@+id/btn_minExchangeCount"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/min_exchange_count"
			android:textAllCaps="false" />

		<Button
			android:id="@+id/btn_latestExchangeTime"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/latest_exchange_time_24_hour_system"
			android:textAllCaps="false" />

		<CheckBox
			android:id="@+id/cb_kbSignIn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:text="@string/koubei_sign_in" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#FF898989"
			android:text="@string/more"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="#FFFFFFFF" />

		<Button
			android:id="@+id/btn_donation_developer"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/button"
			android:gravity="left|center_vertical"
			android:minHeight="50dp"
			android:onClick="onClick"
			android:paddingLeft="8dp"
			android:text="@string/support_developer"
			android:textAllCaps="false" />

	</LinearLayout>

</LinearLayout>